jvm21-demo: updated README.md for setup